--- a/archives/toutiao-search/2024-03-12.md
+++ b/archives/toutiao-search/2024-03-12.md
@@ -1,55 +1,75 @@
 # 2024-03-12
 
-共 232 条
+共 250 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 12 2024 15:00:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Mar 12 2024 16:00:53 GMT+0800 (China Standard Time) -->
+1. [“点读机女孩”需要承担法律责任吗](https://so.toutiao.com/search?keyword=“点读机女孩”需要承担法律责任吗)
+1. [樊振东无缘WTT新加坡大满贯16强](https://so.toutiao.com/search?keyword=樊振东无缘WTT新加坡大满贯16强)
+1. [各地春耕春管“科技范”满满](https://so.toutiao.com/search?keyword=各地春耕春管“科技范”满满)
 1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
 1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
-1. [各地春耕春管“科技范”满满](https://so.toutiao.com/search?keyword=各地春耕春管“科技范”满满)
-1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
-1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
 1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
+1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
 1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
-1. [钟薛高及创始人被限制高消费](https://so.toutiao.com/search?keyword=钟薛高及创始人被限制高消费)
+1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
+1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
+1. [多家野生动物园辟谣门票免费](https://so.toutiao.com/search?keyword=多家野生动物园辟谣门票免费)
+1. [英国偏远山上现神秘金属巨柱](https://so.toutiao.com/search?keyword=英国偏远山上现神秘金属巨柱)
+1. [武汉一海底捞店内发生斗殴](https://so.toutiao.com/search?keyword=武汉一海底捞店内发生斗殴)
+1. [名嘴：蔡英文作孽八年留下个烂摊子](https://so.toutiao.com/search?keyword=名嘴：蔡英文作孽八年留下个烂摊子)
+1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
+1. [《周处除三害》票房破4亿](https://so.toutiao.com/search?keyword=《周处除三害》票房破4亿)
+1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
+1. [燃气灶污染比吸入汽车尾气还严重](https://so.toutiao.com/search?keyword=燃气灶污染比吸入汽车尾气还严重)
+1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
+1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
+1. [美国醉汉怒怼黑熊](https://so.toutiao.com/search?keyword=美国醉汉怒怼黑熊)
 1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
 1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
-1. [多家野生动物园辟谣门票免费](https://so.toutiao.com/search?keyword=多家野生动物园辟谣门票免费)
-1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
-1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
-1. [燃气灶污染比吸入汽车尾气还严重](https://so.toutiao.com/search?keyword=燃气灶污染比吸入汽车尾气还严重)
-1. [外卖小哥凌晨狂奔15公里送餐](https://so.toutiao.com/search?keyword=外卖小哥凌晨狂奔15公里送餐)
-1. [美一高中附近发生群殴 1名女孩重伤](https://so.toutiao.com/search?keyword=美一高中附近发生群殴+1名女孩重伤)
-1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
-1. [木卫二日产氧量足够百万人活一天](https://so.toutiao.com/search?keyword=木卫二日产氧量足够百万人活一天)
-1. [媒体：点读机女孩不应“延迟发布”](https://so.toutiao.com/search?keyword=媒体：点读机女孩不应“延迟发布”)
+1. [中国新能源车会成为孤岛吗](https://so.toutiao.com/search?keyword=中国新能源车会成为孤岛吗)
+1. [收评：沪指震荡调整跌0.41%](https://so.toutiao.com/search?keyword=收评：沪指震荡调整跌0.41%)
+1. [教育局回应女孩遭2老师轮番暴打](https://so.toutiao.com/search?keyword=教育局回应女孩遭2老师轮番暴打)
+1. [林诗栋：没想到能赢樊振东](https://so.toutiao.com/search?keyword=林诗栋：没想到能赢樊振东)
+1. [央广网调查农村断缴医保潮](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保潮)
 1. [2024年两会将这样影响你的生活](https://so.toutiao.com/search?keyword=2024年两会将这样影响你的生活)
+1. [媒体：点读机女孩不应“延迟发布”](https://so.toutiao.com/search?keyword=媒体：点读机女孩不应“延迟发布”)
+1. [木卫二日产氧量足够百万人活一天](https://so.toutiao.com/search?keyword=木卫二日产氧量足够百万人活一天)
+1. [捷克总统：北约军队去乌“不违法”](https://so.toutiao.com/search?keyword=捷克总统：北约军队去乌“不违法”)
+1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
+1. [雷蒙多宣称要确保尖端技术美有中无](https://so.toutiao.com/search?keyword=雷蒙多宣称要确保尖端技术美有中无)
+1. [人大代表：进一步优化外资营商环境](https://so.toutiao.com/search?keyword=人大代表：进一步优化外资营商环境)
+1. [B太揭秘加油站缺斤少两](https://so.toutiao.com/search?keyword=B太揭秘加油站缺斤少两)
 1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
-1. [“点读机女孩”需要承担法律责任吗](https://so.toutiao.com/search?keyword=“点读机女孩”需要承担法律责任吗)
+1. [丈夫看店铺监控发现妻子出轨](https://so.toutiao.com/search?keyword=丈夫看店铺监控发现妻子出轨)
+1. [花旗银行预测金价或将超过750元](https://so.toutiao.com/search?keyword=花旗银行预测金价或将超过750元)
+1. [成都警方通报一起伤人事件](https://so.toutiao.com/search?keyword=成都警方通报一起伤人事件)
+1. [情侣分手后房子应该归谁](https://so.toutiao.com/search?keyword=情侣分手后房子应该归谁)
+1. [大V：说回本就离开股市的人离场没](https://so.toutiao.com/search?keyword=大V：说回本就离开股市的人离场没)
+1. [媒体剖析我国房地产发展存在问题](https://so.toutiao.com/search?keyword=媒体剖析我国房地产发展存在问题)
+1. [美一高中附近发生群殴 1名女孩重伤](https://so.toutiao.com/search?keyword=美一高中附近发生群殴+1名女孩重伤)
+1. [《向往的生活》小羊小不点去世](https://so.toutiao.com/search?keyword=《向往的生活》小羊小不点去世)
+1. [专家：以色列左翼已启动倒阁行动](https://so.toutiao.com/search?keyword=专家：以色列左翼已启动倒阁行动)
+1. [快递员拒派送被投诉反威胁客户](https://so.toutiao.com/search?keyword=快递员拒派送被投诉反威胁客户)
+1. [龙狮男篮返回佛山主场惜败上海](https://so.toutiao.com/search?keyword=龙狮男篮返回佛山主场惜败上海)
+1. [妈妈发现宝宝会走路了忙调监控回看](https://so.toutiao.com/search?keyword=妈妈发现宝宝会走路了忙调监控回看)
+1. [鸟山明遗作将于秋季上映](https://so.toutiao.com/search?keyword=鸟山明遗作将于秋季上映)
+1. [钟薛高及创始人被限制高消费](https://so.toutiao.com/search?keyword=钟薛高及创始人被限制高消费)
+1. [外卖小哥凌晨狂奔15公里送餐](https://so.toutiao.com/search?keyword=外卖小哥凌晨狂奔15公里送餐)
 1. [东风“对赌”车型猛士917](https://so.toutiao.com/search?keyword=东风“对赌”车型猛士917)
 1. [物业为阻止业主装吊窗引冲突](https://so.toutiao.com/search?keyword=物业为阻止业主装吊窗引冲突)
-1. [丈夫看店铺监控发现妻子出轨](https://so.toutiao.com/search?keyword=丈夫看店铺监控发现妻子出轨)
-1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
 1. [国足新帅：对阵新加坡会以自己为主](https://so.toutiao.com/search?keyword=国足新帅：对阵新加坡会以自己为主)
 1. [列车上两女子因孩子哭闹起争执](https://so.toutiao.com/search?keyword=列车上两女子因孩子哭闹起争执)
-1. [武汉一海底捞店内发生斗殴](https://so.toutiao.com/search?keyword=武汉一海底捞店内发生斗殴)
 1. [央广网调查医保缴费标准连年上涨](https://so.toutiao.com/search?keyword=央广网调查医保缴费标准连年上涨)
-1. [雷蒙多宣称要确保尖端技术美有中无](https://so.toutiao.com/search?keyword=雷蒙多宣称要确保尖端技术美有中无)
-1. [鸟山明遗作将于秋季上映](https://so.toutiao.com/search?keyword=鸟山明遗作将于秋季上映)
 1. [中国女子橄榄球6战全胜夺世界冠军](https://so.toutiao.com/search?keyword=中国女子橄榄球6战全胜夺世界冠军)
 1. [任志强履新华福证券 担任总裁助理](https://so.toutiao.com/search?keyword=任志强履新华福证券+担任总裁助理)
-1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
 1. [张红伟已任开封市委常委](https://so.toutiao.com/search?keyword=张红伟已任开封市委常委)
-1. [捷克总统：北约军队去乌“不违法”](https://so.toutiao.com/search?keyword=捷克总统：北约军队去乌“不违法”)
 1. [杨紫琼祝贺石头姐拿奖](https://so.toutiao.com/search?keyword=杨紫琼祝贺石头姐拿奖)
 1. [巴媒：两会显示中国务实姿态](https://so.toutiao.com/search?keyword=巴媒：两会显示中国务实姿态)
 1. [汽车应触屏化还是保留物理按键](https://so.toutiao.com/search?keyword=汽车应触屏化还是保留物理按键)
 1. [山东一公司涉嫌非法吸收公众存款](https://so.toutiao.com/search?keyword=山东一公司涉嫌非法吸收公众存款)
-1. [《向往的生活》小羊小不点去世](https://so.toutiao.com/search?keyword=《向往的生活》小羊小不点去世)
 1. [王楚然双开门大衣](https://so.toutiao.com/search?keyword=王楚然双开门大衣)
 1. [山西一煤矿发生溃仓事故5死2失联](https://so.toutiao.com/search?keyword=山西一煤矿发生溃仓事故5死2失联)
-1. [中国新能源车会成为孤岛吗](https://so.toutiao.com/search?keyword=中国新能源车会成为孤岛吗)
-1. [龙狮男篮返回佛山主场惜败上海](https://so.toutiao.com/search?keyword=龙狮男篮返回佛山主场惜败上海)
 1. [朱立伦：周五召开新董事会改选](https://so.toutiao.com/search?keyword=朱立伦：周五召开新董事会改选)
 1. [揭波音安全问题的前员工被发现死亡](https://so.toutiao.com/search?keyword=揭波音安全问题的前员工被发现死亡)
 1. [Selina晒6个月大的儿子](https://so.toutiao.com/search?keyword=Selina晒6个月大的儿子)
@@ -64,7 +84,6 @@
 1. [巴黎世家胶带手镯好看吗](https://so.toutiao.com/search?keyword=巴黎世家胶带手镯好看吗)
 1. [韩国公民在俄远东从事侦察活动被捕](https://so.toutiao.com/search?keyword=韩国公民在俄远东从事侦察活动被捕)
 1. [菲前官员：南海仲裁是愚蠢游戏](https://so.toutiao.com/search?keyword=菲前官员：南海仲裁是愚蠢游戏)
-1. [快递员拒派送被投诉反威胁客户](https://so.toutiao.com/search?keyword=快递员拒派送被投诉反威胁客户)
 1. [媒体：最无悬念的一届奥斯卡](https://so.toutiao.com/search?keyword=媒体：最无悬念的一届奥斯卡)
 1. [中国企业争锋下一代新型显示技术](https://so.toutiao.com/search?keyword=中国企业争锋下一代新型显示技术)
 1. [印度成功试射“烈火-5”型导弹](https://so.toutiao.com/search?keyword=印度成功试射“烈火-5”型导弹)
@@ -83,7 +102,6 @@
 1. [边防新兵踏上冰川巡逻路](https://so.toutiao.com/search?keyword=边防新兵踏上冰川巡逻路)
 1. [阿根廷央行将基准利率下调至80%](https://so.toutiao.com/search?keyword=阿根廷央行将基准利率下调至80%)
 1. [英伟达CEO回应常年穿皮衣](https://so.toutiao.com/search?keyword=英伟达CEO回应常年穿皮衣)
-1. [大V：说回本就离开股市的人离场没](https://so.toutiao.com/search?keyword=大V：说回本就离开股市的人离场没)
 1. [李东生：企业敢于投资未来才有未来](https://so.toutiao.com/search?keyword=李东生：企业敢于投资未来才有未来)
 1. [孙兴慜效力热刺9年成队史第5射手](https://so.toutiao.com/search?keyword=孙兴慜效力热刺9年成队史第5射手)
 1. [新疆高院原副院长蒋新华被查](https://so.toutiao.com/search?keyword=新疆高院原副院长蒋新华被查)
