--- a/archives/toutiao-search/2024-03-12.md
+++ b/archives/toutiao-search/2024-03-12.md
@@ -1,56 +1,78 @@
 # 2024-03-12
 
-共 250 条
+共 269 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 12 2024 16:00:53 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Mar 12 2024 17:00:38 GMT+0800 (China Standard Time) -->
+1. [官方：点读机女孩视频系去年拍摄](https://so.toutiao.com/search?keyword=官方：点读机女孩视频系去年拍摄)
+1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
+1. [“高频指标”释放经济运行积极信号](https://so.toutiao.com/search?keyword=“高频指标”释放经济运行积极信号)
+1. [男子买老凤祥手镯 剪开发现2根金丝](https://so.toutiao.com/search?keyword=男子买老凤祥手镯+剪开发现2根金丝)
+1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
+1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
+1. [2024研考国家线发布](https://so.toutiao.com/search?keyword=2024研考国家线发布)
+1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
+1. [特朗普：不会允许各国弃用美元](https://so.toutiao.com/search?keyword=特朗普：不会允许各国弃用美元)
+1. [林诗栋：没想到能赢樊振东](https://so.toutiao.com/search?keyword=林诗栋：没想到能赢樊振东)
+1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
+1. [西安海洋公园发生踩踏事件？假的](https://so.toutiao.com/search?keyword=西安海洋公园发生踩踏事件？假的)
+1. [点读机女孩需要承担法律责任吗](https://so.toutiao.com/search?keyword=点读机女孩需要承担法律责任吗)
+1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
+1. [燃气灶污染比吸入汽车尾气还严重](https://so.toutiao.com/search?keyword=燃气灶污染比吸入汽车尾气还严重)
+1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
+1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
+1. [女儿汇款单附言被老人剪下珍藏25年](https://so.toutiao.com/search?keyword=女儿汇款单附言被老人剪下珍藏25年)
+1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
+1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
+1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
+1. [黑车机智走位打破转盘“闭环”](https://so.toutiao.com/search?keyword=黑车机智走位打破转盘“闭环”)
+1. [丈夫藏10万练功券被妻子拿去存钱](https://so.toutiao.com/search?keyword=丈夫藏10万练功券被妻子拿去存钱)
+1. [外交部：中菲在南海不存在领土争议](https://so.toutiao.com/search?keyword=外交部：中菲在南海不存在领土争议)
+1. [人民网评点读机女孩：打造网红不能造假](https://so.toutiao.com/search?keyword=人民网评点读机女孩：打造网红不能造假)
+1. [倪妮张震活动现场同框](https://so.toutiao.com/search?keyword=倪妮张震活动现场同框)
+1. [英国偏远山上现神秘金属巨柱](https://so.toutiao.com/search?keyword=英国偏远山上现神秘金属巨柱)
+1. [教育局回应女孩遭2老师轮番暴打](https://so.toutiao.com/search?keyword=教育局回应女孩遭2老师轮番暴打)
+1. [央广网调查农村断缴医保背后](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保背后)
+1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
+1. [名嘴：蔡英文作孽八年留下个烂摊子](https://so.toutiao.com/search?keyword=名嘴：蔡英文作孽八年留下个烂摊子)
+1. [韩称若朝鲜挑衅将采取先斩后奏措施](https://so.toutiao.com/search?keyword=韩称若朝鲜挑衅将采取先斩后奏措施)
+1. [嫌犯借如厕越窗坠亡 公安局赔110万](https://so.toutiao.com/search?keyword=嫌犯借如厕越窗坠亡+公安局赔110万)
+1. [中国新能源车会成为孤岛吗](https://so.toutiao.com/search?keyword=中国新能源车会成为孤岛吗)
+1. [《周处除三害》中九次圣杯概率多大](https://so.toutiao.com/search?keyword=《周处除三害》中九次圣杯概率多大)
+1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
+1. [美一高中附近发生群殴 1名女孩重伤](https://so.toutiao.com/search?keyword=美一高中附近发生群殴+1名女孩重伤)
+1. [花旗银行预测金价或将超过750元](https://so.toutiao.com/search?keyword=花旗银行预测金价或将超过750元)
+1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
+1. [北约秘书长回应“举白旗”言论](https://so.toutiao.com/search?keyword=北约秘书长回应“举白旗”言论)
+1. [捷克总统：北约军队去乌“不违法”](https://so.toutiao.com/search?keyword=捷克总统：北约军队去乌“不违法”)
+1. [雷蒙多宣称要确保尖端技术美有中无](https://so.toutiao.com/search?keyword=雷蒙多宣称要确保尖端技术美有中无)
+1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
+1. [2024年两会将这样影响你的生活](https://so.toutiao.com/search?keyword=2024年两会将这样影响你的生活)
+1. [券商：HBM或成存储芯片复苏驱动力](https://so.toutiao.com/search?keyword=券商：HBM或成存储芯片复苏驱动力)
+1. [山西一煤矿发生溃仓事故5死2失联](https://so.toutiao.com/search?keyword=山西一煤矿发生溃仓事故5死2失联)
+1. [杨紫琼祝贺石头姐拿奖](https://so.toutiao.com/search?keyword=杨紫琼祝贺石头姐拿奖)
+1. [快递员拒派送被投诉反威胁客户](https://so.toutiao.com/search?keyword=快递员拒派送被投诉反威胁客户)
+1. [专家：以色列左翼已启动倒阁行动](https://so.toutiao.com/search?keyword=专家：以色列左翼已启动倒阁行动)
+1. [韩官方将与首尔大学医学院教授对话](https://so.toutiao.com/search?keyword=韩官方将与首尔大学医学院教授对话)
 1. [“点读机女孩”需要承担法律责任吗](https://so.toutiao.com/search?keyword=“点读机女孩”需要承担法律责任吗)
 1. [樊振东无缘WTT新加坡大满贯16强](https://so.toutiao.com/search?keyword=樊振东无缘WTT新加坡大满贯16强)
 1. [各地春耕春管“科技范”满满](https://so.toutiao.com/search?keyword=各地春耕春管“科技范”满满)
-1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
-1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
-1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
-1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
-1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
-1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
-1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
 1. [多家野生动物园辟谣门票免费](https://so.toutiao.com/search?keyword=多家野生动物园辟谣门票免费)
-1. [英国偏远山上现神秘金属巨柱](https://so.toutiao.com/search?keyword=英国偏远山上现神秘金属巨柱)
 1. [武汉一海底捞店内发生斗殴](https://so.toutiao.com/search?keyword=武汉一海底捞店内发生斗殴)
-1. [名嘴：蔡英文作孽八年留下个烂摊子](https://so.toutiao.com/search?keyword=名嘴：蔡英文作孽八年留下个烂摊子)
-1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
 1. [《周处除三害》票房破4亿](https://so.toutiao.com/search?keyword=《周处除三害》票房破4亿)
-1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
-1. [燃气灶污染比吸入汽车尾气还严重](https://so.toutiao.com/search?keyword=燃气灶污染比吸入汽车尾气还严重)
-1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
-1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
 1. [美国醉汉怒怼黑熊](https://so.toutiao.com/search?keyword=美国醉汉怒怼黑熊)
-1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
-1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
-1. [中国新能源车会成为孤岛吗](https://so.toutiao.com/search?keyword=中国新能源车会成为孤岛吗)
 1. [收评：沪指震荡调整跌0.41%](https://so.toutiao.com/search?keyword=收评：沪指震荡调整跌0.41%)
-1. [教育局回应女孩遭2老师轮番暴打](https://so.toutiao.com/search?keyword=教育局回应女孩遭2老师轮番暴打)
-1. [林诗栋：没想到能赢樊振东](https://so.toutiao.com/search?keyword=林诗栋：没想到能赢樊振东)
 1. [央广网调查农村断缴医保潮](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保潮)
-1. [2024年两会将这样影响你的生活](https://so.toutiao.com/search?keyword=2024年两会将这样影响你的生活)
 1. [媒体：点读机女孩不应“延迟发布”](https://so.toutiao.com/search?keyword=媒体：点读机女孩不应“延迟发布”)
 1. [木卫二日产氧量足够百万人活一天](https://so.toutiao.com/search?keyword=木卫二日产氧量足够百万人活一天)
-1. [捷克总统：北约军队去乌“不违法”](https://so.toutiao.com/search?keyword=捷克总统：北约军队去乌“不违法”)
-1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
-1. [雷蒙多宣称要确保尖端技术美有中无](https://so.toutiao.com/search?keyword=雷蒙多宣称要确保尖端技术美有中无)
 1. [人大代表：进一步优化外资营商环境](https://so.toutiao.com/search?keyword=人大代表：进一步优化外资营商环境)
 1. [B太揭秘加油站缺斤少两](https://so.toutiao.com/search?keyword=B太揭秘加油站缺斤少两)
-1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
 1. [丈夫看店铺监控发现妻子出轨](https://so.toutiao.com/search?keyword=丈夫看店铺监控发现妻子出轨)
-1. [花旗银行预测金价或将超过750元](https://so.toutiao.com/search?keyword=花旗银行预测金价或将超过750元)
 1. [成都警方通报一起伤人事件](https://so.toutiao.com/search?keyword=成都警方通报一起伤人事件)
 1. [情侣分手后房子应该归谁](https://so.toutiao.com/search?keyword=情侣分手后房子应该归谁)
 1. [大V：说回本就离开股市的人离场没](https://so.toutiao.com/search?keyword=大V：说回本就离开股市的人离场没)
 1. [媒体剖析我国房地产发展存在问题](https://so.toutiao.com/search?keyword=媒体剖析我国房地产发展存在问题)
-1. [美一高中附近发生群殴 1名女孩重伤](https://so.toutiao.com/search?keyword=美一高中附近发生群殴+1名女孩重伤)
 1. [《向往的生活》小羊小不点去世](https://so.toutiao.com/search?keyword=《向往的生活》小羊小不点去世)
-1. [专家：以色列左翼已启动倒阁行动](https://so.toutiao.com/search?keyword=专家：以色列左翼已启动倒阁行动)
-1. [快递员拒派送被投诉反威胁客户](https://so.toutiao.com/search?keyword=快递员拒派送被投诉反威胁客户)
 1. [龙狮男篮返回佛山主场惜败上海](https://so.toutiao.com/search?keyword=龙狮男篮返回佛山主场惜败上海)
 1. [妈妈发现宝宝会走路了忙调监控回看](https://so.toutiao.com/search?keyword=妈妈发现宝宝会走路了忙调监控回看)
 1. [鸟山明遗作将于秋季上映](https://so.toutiao.com/search?keyword=鸟山明遗作将于秋季上映)
@@ -64,12 +86,10 @@
 1. [中国女子橄榄球6战全胜夺世界冠军](https://so.toutiao.com/search?keyword=中国女子橄榄球6战全胜夺世界冠军)
 1. [任志强履新华福证券 担任总裁助理](https://so.toutiao.com/search?keyword=任志强履新华福证券+担任总裁助理)
 1. [张红伟已任开封市委常委](https://so.toutiao.com/search?keyword=张红伟已任开封市委常委)
-1. [杨紫琼祝贺石头姐拿奖](https://so.toutiao.com/search?keyword=杨紫琼祝贺石头姐拿奖)
 1. [巴媒：两会显示中国务实姿态](https://so.toutiao.com/search?keyword=巴媒：两会显示中国务实姿态)
 1. [汽车应触屏化还是保留物理按键](https://so.toutiao.com/search?keyword=汽车应触屏化还是保留物理按键)
 1. [山东一公司涉嫌非法吸收公众存款](https://so.toutiao.com/search?keyword=山东一公司涉嫌非法吸收公众存款)
 1. [王楚然双开门大衣](https://so.toutiao.com/search?keyword=王楚然双开门大衣)
-1. [山西一煤矿发生溃仓事故5死2失联](https://so.toutiao.com/search?keyword=山西一煤矿发生溃仓事故5死2失联)
 1. [朱立伦：周五召开新董事会改选](https://so.toutiao.com/search?keyword=朱立伦：周五召开新董事会改选)
 1. [揭波音安全问题的前员工被发现死亡](https://so.toutiao.com/search?keyword=揭波音安全问题的前员工被发现死亡)
 1. [Selina晒6个月大的儿子](https://so.toutiao.com/search?keyword=Selina晒6个月大的儿子)
@@ -121,7 +141,6 @@
 1. [劳荣枝案受害人小木匠女儿发声](https://so.toutiao.com/search?keyword=劳荣枝案受害人小木匠女儿发声)
 1. [房东嫌租客没打扫卫生扣全部押金](https://so.toutiao.com/search?keyword=房东嫌租客没打扫卫生扣全部押金)
 1. [卡桑旅狙击手狙杀以色列士兵](https://so.toutiao.com/search?keyword=卡桑旅狙击手狙杀以色列士兵)
-1. [韩官方将与首尔大学医学院教授对话](https://so.toutiao.com/search?keyword=韩官方将与首尔大学医学院教授对话)
 1. [ST鸿达ST贵人等6只个股今日停牌](https://so.toutiao.com/search?keyword=ST鸿达ST贵人等6只个股今日停牌)
 1. [正部级老虎被当典型通报](https://so.toutiao.com/search?keyword=正部级老虎被当典型通报)
 1. [复旦大学对校外人士开放食堂](https://so.toutiao.com/search?keyword=复旦大学对校外人士开放食堂)
