--- a/archives/toutiao-search/2024-03-12.md
+++ b/archives/toutiao-search/2024-03-12.md
@@ -1,52 +1,68 @@
 # 2024-03-12
 
-共 269 条
+共 284 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 12 2024 17:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Mar 12 2024 18:00:37 GMT+0800 (China Standard Time) -->
 1. [官方：点读机女孩视频系去年拍摄](https://so.toutiao.com/search?keyword=官方：点读机女孩视频系去年拍摄)
 1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
 1. [“高频指标”释放经济运行积极信号](https://so.toutiao.com/search?keyword=“高频指标”释放经济运行积极信号)
-1. [男子买老凤祥手镯 剪开发现2根金丝](https://so.toutiao.com/search?keyword=男子买老凤祥手镯+剪开发现2根金丝)
-1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
 1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
-1. [2024研考国家线发布](https://so.toutiao.com/search?keyword=2024研考国家线发布)
-1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
-1. [特朗普：不会允许各国弃用美元](https://so.toutiao.com/search?keyword=特朗普：不会允许各国弃用美元)
-1. [林诗栋：没想到能赢樊振东](https://so.toutiao.com/search?keyword=林诗栋：没想到能赢樊振东)
-1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
-1. [西安海洋公园发生踩踏事件？假的](https://so.toutiao.com/search?keyword=西安海洋公园发生踩踏事件？假的)
-1. [点读机女孩需要承担法律责任吗](https://so.toutiao.com/search?keyword=点读机女孩需要承担法律责任吗)
-1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
-1. [燃气灶污染比吸入汽车尾气还严重](https://so.toutiao.com/search?keyword=燃气灶污染比吸入汽车尾气还严重)
-1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
-1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
-1. [女儿汇款单附言被老人剪下珍藏25年](https://so.toutiao.com/search?keyword=女儿汇款单附言被老人剪下珍藏25年)
-1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
-1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
-1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
-1. [黑车机智走位打破转盘“闭环”](https://so.toutiao.com/search?keyword=黑车机智走位打破转盘“闭环”)
-1. [丈夫藏10万练功券被妻子拿去存钱](https://so.toutiao.com/search?keyword=丈夫藏10万练功券被妻子拿去存钱)
-1. [外交部：中菲在南海不存在领土争议](https://so.toutiao.com/search?keyword=外交部：中菲在南海不存在领土争议)
 1. [人民网评点读机女孩：打造网红不能造假](https://so.toutiao.com/search?keyword=人民网评点读机女孩：打造网红不能造假)
-1. [倪妮张震活动现场同框](https://so.toutiao.com/search?keyword=倪妮张震活动现场同框)
+1. [男子买老凤祥手镯 剪开发现2根金丝](https://so.toutiao.com/search?keyword=男子买老凤祥手镯+剪开发现2根金丝)
+1. [2024研考国家线发布](https://so.toutiao.com/search?keyword=2024研考国家线发布)
+1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
+1. [外交部回应特朗普威胁对华加征关税](https://so.toutiao.com/search?keyword=外交部回应特朗普威胁对华加征关税)
+1. [央媒评广西一小学生被扇打拖拽](https://so.toutiao.com/search?keyword=央媒评广西一小学生被扇打拖拽)
+1. [餐厅擅自砍伐外滩香樟树被罚47万](https://so.toutiao.com/search?keyword=餐厅擅自砍伐外滩香樟树被罚47万)
+1. [西安海洋公园发生踩踏事件？假的](https://so.toutiao.com/search?keyword=西安海洋公园发生踩踏事件？假的)
+1. [点读机女孩MCN道歉：时间表述纰漏](https://so.toutiao.com/search?keyword=点读机女孩MCN道歉：时间表述纰漏)
+1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
+1. [理想MEGA战败全赖黑公关吗](https://so.toutiao.com/search?keyword=理想MEGA战败全赖黑公关吗)
+1. [点读机女孩需要承担法律责任吗](https://so.toutiao.com/search?keyword=点读机女孩需要承担法律责任吗)
+1. [丈夫藏10万练功券被妻子拿去存钱](https://so.toutiao.com/search?keyword=丈夫藏10万练功券被妻子拿去存钱)
 1. [英国偏远山上现神秘金属巨柱](https://so.toutiao.com/search?keyword=英国偏远山上现神秘金属巨柱)
+1. [《周处除三害》中九次圣杯概率多大](https://so.toutiao.com/search?keyword=《周处除三害》中九次圣杯概率多大)
+1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
 1. [教育局回应女孩遭2老师轮番暴打](https://so.toutiao.com/search?keyword=教育局回应女孩遭2老师轮番暴打)
+1. [特朗普：不会允许各国弃用美元](https://so.toutiao.com/search?keyword=特朗普：不会允许各国弃用美元)
+1. [外交部：中菲在南海不存在领土争议](https://so.toutiao.com/search?keyword=外交部：中菲在南海不存在领土争议)
+1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
+1. [网友热议清明调休：摒弃拼凑式假期](https://so.toutiao.com/search?keyword=网友热议清明调休：摒弃拼凑式假期)
+1. [外交部：敦促韩方不要跟风炒作](https://so.toutiao.com/search?keyword=外交部：敦促韩方不要跟风炒作)
+1. [燃气灶污染比吸入汽车尾气还严重](https://so.toutiao.com/search?keyword=燃气灶污染比吸入汽车尾气还严重)
+1. [花旗银行预测金价或将超过750元](https://so.toutiao.com/search?keyword=花旗银行预测金价或将超过750元)
+1. [林诗栋：没想到能赢樊振东](https://so.toutiao.com/search?keyword=林诗栋：没想到能赢樊振东)
+1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
+1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
+1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
 1. [央广网调查农村断缴医保背后](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保背后)
-1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
+1. [实探郑州小米汽车门店](https://so.toutiao.com/search?keyword=实探郑州小米汽车门店)
+1. [武汉一海底捞店内发生斗殴](https://so.toutiao.com/search?keyword=武汉一海底捞店内发生斗殴)
+1. [美军打击胡塞武装装备](https://so.toutiao.com/search?keyword=美军打击胡塞武装装备)
+1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
+1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
 1. [名嘴：蔡英文作孽八年留下个烂摊子](https://so.toutiao.com/search?keyword=名嘴：蔡英文作孽八年留下个烂摊子)
+1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
+1. [黑车机智走位打破转盘“闭环”](https://so.toutiao.com/search?keyword=黑车机智走位打破转盘“闭环”)
+1. [中国新能源车会成为孤岛吗](https://so.toutiao.com/search?keyword=中国新能源车会成为孤岛吗)
+1. [波音安全问题吹哨人疑似开枪自杀](https://so.toutiao.com/search?keyword=波音安全问题吹哨人疑似开枪自杀)
+1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
+1. [特朗普：要用加税让中企到美国造车](https://so.toutiao.com/search?keyword=特朗普：要用加税让中企到美国造车)
+1. [小米已申请注册多个SU7商标](https://so.toutiao.com/search?keyword=小米已申请注册多个SU7商标)
+1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
+1. [驾校教练酒驾10年内不得重考驾照](https://so.toutiao.com/search?keyword=驾校教练酒驾10年内不得重考驾照)
+1. [胡塞武装称发射导弹击中美货船](https://so.toutiao.com/search?keyword=胡塞武装称发射导弹击中美货船)
+1. [柬埔寨捣毁两个电诈园区 抓捕479人](https://so.toutiao.com/search?keyword=柬埔寨捣毁两个电诈园区+抓捕479人)
+1. [女儿汇款单附言被老人剪下珍藏25年](https://so.toutiao.com/search?keyword=女儿汇款单附言被老人剪下珍藏25年)
+1. [倪妮张震活动现场同框](https://so.toutiao.com/search?keyword=倪妮张震活动现场同框)
 1. [韩称若朝鲜挑衅将采取先斩后奏措施](https://so.toutiao.com/search?keyword=韩称若朝鲜挑衅将采取先斩后奏措施)
 1. [嫌犯借如厕越窗坠亡 公安局赔110万](https://so.toutiao.com/search?keyword=嫌犯借如厕越窗坠亡+公安局赔110万)
-1. [中国新能源车会成为孤岛吗](https://so.toutiao.com/search?keyword=中国新能源车会成为孤岛吗)
-1. [《周处除三害》中九次圣杯概率多大](https://so.toutiao.com/search?keyword=《周处除三害》中九次圣杯概率多大)
-1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
 1. [美一高中附近发生群殴 1名女孩重伤](https://so.toutiao.com/search?keyword=美一高中附近发生群殴+1名女孩重伤)
-1. [花旗银行预测金价或将超过750元](https://so.toutiao.com/search?keyword=花旗银行预测金价或将超过750元)
 1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
 1. [北约秘书长回应“举白旗”言论](https://so.toutiao.com/search?keyword=北约秘书长回应“举白旗”言论)
 1. [捷克总统：北约军队去乌“不违法”](https://so.toutiao.com/search?keyword=捷克总统：北约军队去乌“不违法”)
 1. [雷蒙多宣称要确保尖端技术美有中无](https://so.toutiao.com/search?keyword=雷蒙多宣称要确保尖端技术美有中无)
-1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
 1. [2024年两会将这样影响你的生活](https://so.toutiao.com/search?keyword=2024年两会将这样影响你的生活)
 1. [券商：HBM或成存储芯片复苏驱动力](https://so.toutiao.com/search?keyword=券商：HBM或成存储芯片复苏驱动力)
 1. [山西一煤矿发生溃仓事故5死2失联](https://so.toutiao.com/search?keyword=山西一煤矿发生溃仓事故5死2失联)
@@ -58,7 +74,6 @@
 1. [樊振东无缘WTT新加坡大满贯16强](https://so.toutiao.com/search?keyword=樊振东无缘WTT新加坡大满贯16强)
 1. [各地春耕春管“科技范”满满](https://so.toutiao.com/search?keyword=各地春耕春管“科技范”满满)
 1. [多家野生动物园辟谣门票免费](https://so.toutiao.com/search?keyword=多家野生动物园辟谣门票免费)
-1. [武汉一海底捞店内发生斗殴](https://so.toutiao.com/search?keyword=武汉一海底捞店内发生斗殴)
 1. [《周处除三害》票房破4亿](https://so.toutiao.com/search?keyword=《周处除三害》票房破4亿)
 1. [美国醉汉怒怼黑熊](https://so.toutiao.com/search?keyword=美国醉汉怒怼黑熊)
 1. [收评：沪指震荡调整跌0.41%](https://so.toutiao.com/search?keyword=收评：沪指震荡调整跌0.41%)
