--- a/archives/toutiao-search/2024-03-12.md
+++ b/archives/toutiao-search/2024-03-12.md
@@ -1,56 +1,69 @@
 # 2024-03-12
 
-共 313 条
+共 323 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 12 2024 20:08:36 GMT+0800 (China Standard Time) -->
-1. [官方：点读机女孩视频系去年拍摄](https://so.toutiao.com/search?keyword=官方：点读机女孩视频系去年拍摄)
-1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
-1. [“高频指标”释放经济运行积极信号](https://so.toutiao.com/search?keyword=“高频指标”释放经济运行积极信号)
+<!-- 最后更新时间 Tue Mar 12 2024 21:00:52 GMT+0800 (China Standard Time) -->
+1. [广州车祸目击者称肇事车撞人后没停](https://so.toutiao.com/search?keyword=广州车祸目击者称肇事车撞人后没停)
+1. [中国将会造多少航母？海军政委回应](https://so.toutiao.com/search?keyword=中国将会造多少航母？海军政委回应)
+1. [一组数字带你看中国的绿色奇迹](https://so.toutiao.com/search?keyword=一组数字带你看中国的绿色奇迹)
 1. [特朗普：要用加税让中企到美国造车](https://so.toutiao.com/search?keyword=特朗普：要用加税让中企到美国造车)
-1. [外交部回应特朗普威胁对华加征关税](https://so.toutiao.com/search?keyword=外交部回应特朗普威胁对华加征关税)
-1. [男子买老凤祥手镯 剪开发现2根金丝](https://so.toutiao.com/search?keyword=男子买老凤祥手镯+剪开发现2根金丝)
+1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
 1. [理想L系命名调整 新增Ultra车型](https://so.toutiao.com/search?keyword=理想L系命名调整+新增Ultra车型)
-1. [央广网调查农村断缴医保背后](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保背后)
-1. [船老大为救16人斩断价值36万元蟹笼](https://so.toutiao.com/search?keyword=船老大为救16人斩断价值36万元蟹笼)
+1. [男子买老凤祥手镯 剪开发现2根金丝](https://so.toutiao.com/search?keyword=男子买老凤祥手镯+剪开发现2根金丝)
+1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
+1. [外交部回应特朗普威胁对华加征关税](https://so.toutiao.com/search?keyword=外交部回应特朗普威胁对华加征关税)
 1. [女主播泼水节遭围攻 同事出手帮助](https://so.toutiao.com/search?keyword=女主播泼水节遭围攻+同事出手帮助)
 1. [男子对女模特从下向上拍 客服回应](https://so.toutiao.com/search?keyword=男子对女模特从下向上拍+客服回应)
 1. [公园把树挖了搞植树节？不实](https://so.toutiao.com/search?keyword=公园把树挖了搞植树节？不实)
 1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
-1. [台当局：解放军联合战备警巡常态化](https://so.toutiao.com/search?keyword=台当局：解放军联合战备警巡常态化)
-1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
-1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
-1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
-1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
-1. [爷爷为给孙子治病天天吃泡面馒头](https://so.toutiao.com/search?keyword=爷爷为给孙子治病天天吃泡面馒头)
-1. [人民网评点读机女孩：打造网红不能造假](https://so.toutiao.com/search?keyword=人民网评点读机女孩：打造网红不能造假)
+1. [中伊俄海上联合军事演习开幕](https://so.toutiao.com/search?keyword=中伊俄海上联合军事演习开幕)
+1. [点读机女孩MCN道歉：时间表述纰漏](https://so.toutiao.com/search?keyword=点读机女孩MCN道歉：时间表述纰漏)
+1. [央广网调查农村断缴医保背后](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保背后)
+1. [黑车变道与白车并行时突然开车门](https://so.toutiao.com/search?keyword=黑车变道与白车并行时突然开车门)
+1. [男子因买彩票中奖被泄露报警](https://so.toutiao.com/search?keyword=男子因买彩票中奖被泄露报警)
+1. [韩作家称“汉字由韩国人创造”](https://so.toutiao.com/search?keyword=韩作家称“汉字由韩国人创造”)
+1. [官方：点读机女孩视频系去年拍摄](https://so.toutiao.com/search?keyword=官方：点读机女孩视频系去年拍摄)
 1. [杨紫琼回应奥斯卡颁奖礼上疑遭歧视](https://so.toutiao.com/search?keyword=杨紫琼回应奥斯卡颁奖礼上疑遭歧视)
 1. [外交部：敦促韩方不要跟风炒作](https://so.toutiao.com/search?keyword=外交部：敦促韩方不要跟风炒作)
-1. [点读机女孩MCN道歉：时间表述纰漏](https://so.toutiao.com/search?keyword=点读机女孩MCN道歉：时间表述纰漏)
-1. [泽连斯基：欢迎北约相关人员来乌](https://so.toutiao.com/search?keyword=泽连斯基：欢迎北约相关人员来乌)
-1. [韩作家称“汉字由韩国人创造”](https://so.toutiao.com/search?keyword=韩作家称“汉字由韩国人创造”)
+1. [人民网评点读机女孩：打造网红不能造假](https://so.toutiao.com/search?keyword=人民网评点读机女孩：打造网红不能造假)
+1. [爷爷为给孙子治病天天吃泡面馒头](https://so.toutiao.com/search?keyword=爷爷为给孙子治病天天吃泡面馒头)
+1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
 1. [网友热议清明调休：摒弃拼凑式假期](https://so.toutiao.com/search?keyword=网友热议清明调休：摒弃拼凑式假期)
-1. [特朗普：不会允许各国弃用美元](https://so.toutiao.com/search?keyword=特朗普：不会允许各国弃用美元)
 1. [2024研考国家线发布](https://so.toutiao.com/search?keyword=2024研考国家线发布)
-1. [中方回应日方要求撤销水产进口管制](https://so.toutiao.com/search?keyword=中方回应日方要求撤销水产进口管制)
-1. [英国偏远山上现神秘金属巨柱](https://so.toutiao.com/search?keyword=英国偏远山上现神秘金属巨柱)
+1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
+1. [船老大为救16人斩断价值36万元蟹笼](https://so.toutiao.com/search?keyword=船老大为救16人斩断价值36万元蟹笼)
+1. [张本美和赢球后秀起女团舞](https://so.toutiao.com/search?keyword=张本美和赢球后秀起女团舞)
+1. [深圳多名学生在校午餐后呕吐腹泻](https://so.toutiao.com/search?keyword=深圳多名学生在校午餐后呕吐腹泻)
+1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
+1. [台当局：解放军联合战备警巡常态化](https://so.toutiao.com/search?keyword=台当局：解放军联合战备警巡常态化)
+1. [一公司被取消装备采购招标代理资格](https://so.toutiao.com/search?keyword=一公司被取消装备采购招标代理资格)
+1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
 1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
+1. [丈夫藏10万练功券被妻子拿去存钱](https://so.toutiao.com/search?keyword=丈夫藏10万练功券被妻子拿去存钱)
+1. [中方回应日方要求撤销水产进口管制](https://so.toutiao.com/search?keyword=中方回应日方要求撤销水产进口管制)
+1. [被评政治生态恶劣的这地书记任上被查](https://so.toutiao.com/search?keyword=被评政治生态恶劣的这地书记任上被查)
+1. [特朗普：不会允许各国弃用美元](https://so.toutiao.com/search?keyword=特朗普：不会允许各国弃用美元)
+1. [宁静回应与纪凌尘搭戏](https://so.toutiao.com/search?keyword=宁静回应与纪凌尘搭戏)
+1. [特朗普称自己是“关税的信徒”](https://so.toutiao.com/search?keyword=特朗普称自己是“关税的信徒”)
+1. [今日两市主力资金净流入53.88亿元](https://so.toutiao.com/search?keyword=今日两市主力资金净流入53.88亿元)
+1. [罗辑思维重启罗振宇讲文明之旅](https://so.toutiao.com/search?keyword=罗辑思维重启罗振宇讲文明之旅)
+1. [中信建投：黄金价格创新高](https://so.toutiao.com/search?keyword=中信建投：黄金价格创新高)
+1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
+1. [英国偏远山上现神秘金属巨柱](https://so.toutiao.com/search?keyword=英国偏远山上现神秘金属巨柱)
+1. [广州致11人受伤车祸区域已恢复秩序](https://so.toutiao.com/search?keyword=广州致11人受伤车祸区域已恢复秩序)
+1. [月薪八千招不到快递员背后](https://so.toutiao.com/search?keyword=月薪八千招不到快递员背后)
+1. [外交部：中菲在南海不存在领土争议](https://so.toutiao.com/search?keyword=外交部：中菲在南海不存在领土争议)
+1. [“高频指标”释放经济运行积极信号](https://so.toutiao.com/search?keyword=“高频指标”释放经济运行积极信号)
+1. [泽连斯基：欢迎北约相关人员来乌](https://so.toutiao.com/search?keyword=泽连斯基：欢迎北约相关人员来乌)
 1. [物业劝阻老人拉线充电动车被追打](https://so.toutiao.com/search?keyword=物业劝阻老人拉线充电动车被追打)
 1. [约旦联合多国继续向加沙空投物资](https://so.toutiao.com/search?keyword=约旦联合多国继续向加沙空投物资)
-1. [外交部：中菲在南海不存在领土争议](https://so.toutiao.com/search?keyword=外交部：中菲在南海不存在领土争议)
-1. [一公司被取消装备采购招标代理资格](https://so.toutiao.com/search?keyword=一公司被取消装备采购招标代理资格)
-1. [深圳多名学生在校午餐后呕吐腹泻](https://so.toutiao.com/search?keyword=深圳多名学生在校午餐后呕吐腹泻)
 1. [外交部谈巴以冲突：人类的悲剧](https://so.toutiao.com/search?keyword=外交部谈巴以冲突：人类的悲剧)
-1. [中信建投：黄金价格创新高](https://so.toutiao.com/search?keyword=中信建投：黄金价格创新高)
-1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
-1. [月薪八千招不到快递员背后](https://so.toutiao.com/search?keyword=月薪八千招不到快递员背后)
 1. [小米SU7对比竞品定价多少合适](https://so.toutiao.com/search?keyword=小米SU7对比竞品定价多少合适)
 1. [央媒评广西一小学生被扇打拖拽](https://so.toutiao.com/search?keyword=央媒评广西一小学生被扇打拖拽)
 1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
 1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
 1. [女儿汇款单附言被老人剪下珍藏25年](https://so.toutiao.com/search?keyword=女儿汇款单附言被老人剪下珍藏25年)
-1. [张本美和赢球后秀起女团舞](https://so.toutiao.com/search?keyword=张本美和赢球后秀起女团舞)
-1. [今日两市主力资金净流入53.88亿元](https://so.toutiao.com/search?keyword=今日两市主力资金净流入53.88亿元)
 1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
 1. [点读机女孩关联MCN自称孵化刘畊宏](https://so.toutiao.com/search?keyword=点读机女孩关联MCN自称孵化刘畊宏)
 1. [名嘴：蔡英文作孽八年留下个烂摊子](https://so.toutiao.com/search?keyword=名嘴：蔡英文作孽八年留下个烂摊子)
@@ -62,10 +75,8 @@
 1. [芯片繁荣能持续多久](https://so.toutiao.com/search?keyword=芯片繁荣能持续多久)
 1. [实探郑州小米汽车门店](https://so.toutiao.com/search?keyword=实探郑州小米汽车门店)
 1. [点读机女孩需要承担法律责任吗](https://so.toutiao.com/search?keyword=点读机女孩需要承担法律责任吗)
-1. [丈夫藏10万练功券被妻子拿去存钱](https://so.toutiao.com/search?keyword=丈夫藏10万练功券被妻子拿去存钱)
 1. [燃气灶污染比吸入汽车尾气还严重](https://so.toutiao.com/search?keyword=燃气灶污染比吸入汽车尾气还严重)
 1. [花旗银行预测金价或将超过750元](https://so.toutiao.com/search?keyword=花旗银行预测金价或将超过750元)
-1. [被评政治生态恶劣的这地书记任上被查](https://so.toutiao.com/search?keyword=被评政治生态恶劣的这地书记任上被查)
 1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
 1. [《周处除三害》中九次圣杯概率多大](https://so.toutiao.com/search?keyword=《周处除三害》中九次圣杯概率多大)
 1. [环卫工将垃圾扔院子 报警后才扫走](https://so.toutiao.com/search?keyword=环卫工将垃圾扔院子+报警后才扫走)
@@ -74,7 +85,6 @@
 1. [赵少康谈邱国正忧两岸局势睡不着觉](https://so.toutiao.com/search?keyword=赵少康谈邱国正忧两岸局势睡不着觉)
 1. [教育局回应女孩遭2老师轮番暴打](https://so.toutiao.com/search?keyword=教育局回应女孩遭2老师轮番暴打)
 1. [林诗栋：没想到能赢樊振东](https://so.toutiao.com/search?keyword=林诗栋：没想到能赢樊振东)
-1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
 1. [武汉一海底捞店内发生斗殴](https://so.toutiao.com/search?keyword=武汉一海底捞店内发生斗殴)
 1. [美军打击胡塞武装装备](https://so.toutiao.com/search?keyword=美军打击胡塞武装装备)
 1. [黑车机智走位打破转盘“闭环”](https://so.toutiao.com/search?keyword=黑车机智走位打破转盘“闭环”)
